--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["About Us"] = "About Us";
 }
-<h1>@ViewData["Title"]</h1>
+<h1>@ViewData["About Us"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
