working on home page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<body style="background-image:url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pexels.com%2Fsearch%2Fwoodworking%2F&psig=AOvVaw3UuFOLcVUqa5FJcIaoXY2T&ust=1710229398238000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCODbn47b64QDFQAAAAAdAAAAABA8); background-size: auto">
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 style= "color:aliceblue">Welcome</h1>
+    
+    <h3 style= "color:aliceblue">Thank you for visiting KhumaloCraft Emporium, it is a pleasure to have you here with us. The overarching purpose of this website is 
+        to connect talented individuals with similar like minded buyers. please feel free to take a look around, more information can be found in 
+        the about us section.
+    </h3>
 </div>
+</body>
