--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -3,6 +3,35 @@
 *@
 @{
 }
-<body>
+<body style= "background=">
+    <h2 style="text-align:center">
+        Who We Are
+    </h2>
+    <h3>
+        general information
+    </h3>
+    <p>
+        My name is James Khumalo. I am a young artisan who creates art through <br />
+        multiple different medians such as clay and wood, i like to think of <br />
+        myself as a driven and creative individual who strives to always do my best.
+    </p>
 
+    <h2 style="text-align:right">
+        Our Goal
+    </h2>
+    <p style="text-align:right">
+        My intention with this e-commerce website is to create a safe place for creative,<br/> innovative artists to become blossoming entrpreneurs and 
+        sell<br/> their hard work to like minded individuals who enjoy art.
+    </p>
+
+    <h2 style="text-align:center">
+        how we plan to do this
+    </h2>
+    <p style="text-align:center">
+        This website will serve as a marketplace that aspiring artists can list their work for people to see and buy.<br />
+        the website will work as a middleman removing the risk for both the artist and the buyer. Artisists will be<br />
+        entitled to 95% of the sale as the website will take 5% for maintenance and running costs.<br />
+        Both artist and buyer can rest assured that their best interests will be taken into account<br />
+        and they will be protected when they make a purchase.
+    </p>
 </body>
