work on about us page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<body style="background-image:url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pexels.com%2Fsearch%2Fwoodworking%2F&psig=AOvVaw3UuFOLcVUqa5FJcIaoXY2T&ust=1710229398238000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCODbn47b64QDFQAAAAAdAAAAABA8); background-size: auto">
+<body style="background-image:url(https://images.unsplash.com/photo-1414497729697-b8555ba6c1cc?q=80&w=1910&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); background-size: auto">
 <div class="text-center">
     <h1 style= "color:aliceblue">Welcome</h1>
     
