--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -3,35 +3,53 @@
 *@
 @{
 }
-<body style= "background=">
+<body style="background-image:url(https://images.unsplash.com/photo-1595446472901-b0988e150f9c?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); background-size: cover">
+   
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
     <h2 style="text-align:center">
         Who We Are
     </h2>
+    </div>
+
+    <br />
+
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
     <h3>
         general information
     </h3>
-    <p>
+    <p style ="font-weight:bold;">
         My name is James Khumalo. I am a young artisan who creates art through <br />
-        multiple different medians such as clay and wood, i like to think of <br />
-        myself as a driven and creative individual who strives to always do my best.
+        multiple different mediums such as clay and wood, i like to think of <br />
+        myself as a driven and creative individual who strives to always do his best.
     </p>
+    </div>
 
-    <h2 style="text-align:right">
+    <br />
+
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+    <h3 style="text-align:right">
         Our Goal
-    </h2>
-    <p style="text-align:right">
+    </h3>
+    <p style="text-align:right; font-weight:bold">
         My intention with this e-commerce website is to create a safe place for creative,<br/> innovative artists to become blossoming entrpreneurs and 
         sell<br/> their hard work to like minded individuals who enjoy art.
     </p>
+    </div>
 
-    <h2 style="text-align:center">
+    <br />
+
+    <div style="font-weight:bold; text-align:center; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+    <h3>
         how we plan to do this
-    </h2>
-    <p style="text-align:center">
+    </h3>
+    <p>
         This website will serve as a marketplace that aspiring artists can list their work for people to see and buy.<br />
         the website will work as a middleman removing the risk for both the artist and the buyer. Artisists will be<br />
         entitled to 95% of the sale as the website will take 5% for maintenance and running costs.<br />
         Both artist and buyer can rest assured that their best interests will be taken into account<br />
         and they will be protected when they make a purchase.
     </p>
+    </div>
+    
+
 </body>
