working on contactUs

--- a/Views/Home/ContactUs.cshtml
+++ b/Views/Home/ContactUs.cshtml
@@ -3,3 +3,26 @@
 *@
 @{
 }
+
+ <div style="display: flex; align-items: center;">
+
+    <h1 style="text-align:center">
+        Contact us
+    </h1>
+
+        <div style="margin-right: 134px; margin-left: 200px">
+        <img src="https://i.postimg.cc/151THRSQ/Untitled.png" alt="Phone" width="150" height="60">
+            <p>+27 83 857 0874</p>
+        </div>
+
+        <div style="margin-right: 229px;">
+        <img src="https://i.postimg.cc/B6L8yyYD/Untitled1.png" alt="PO Box" width="70" height="60">
+            <p>Text for Logo 2</p>
+        </div>
+
+        <div style="margin-right: 229px;">
+        <img src="https://i.postimg.cc/L6ZqvrYM/Untitled3.png" alt="Email" width="70" height="60">
+            <p>Text for Logo 2</p>
+        </div>
+
+    </div>
