working on contact us

--- a/Views/Home/ContactUs.cshtml
+++ b/Views/Home/ContactUs.cshtml
@@ -17,12 +17,14 @@
 
         <div style="margin-right: 229px;">
         <img src="https://i.postimg.cc/B6L8yyYD/Untitled1.png" alt="PO Box" width="70" height="60">
-            <p>Text for Logo 2</p>
+        <p>
+            1 Oxford Street
+        </p>
         </div>
 
         <div style="margin-right: 229px;">
         <img src="https://i.postimg.cc/L6ZqvrYM/Untitled3.png" alt="Email" width="70" height="60">
-            <p>Text for Logo 2</p>
+            <p>JKhumalo@gmail.com</p>
         </div>
 
     </div>
