--- a/Views/Home/ContactUs.cshtml
+++ b/Views/Home/ContactUs.cshtml
@@ -1,10 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-
- <div style="display: flex; align-items: center;">
+﻿ <div style="display: flex; align-items: center;">
 
     <h1 style="text-align:center">
         Contact us
