--- a/Views/Home/ContactUs.cshtml
+++ b/Views/Home/ContactUs.cshtml
@@ -1,24 +1,26 @@
-﻿ <div style="display: flex; align-items: center;">
+﻿<body style="background-image:url(https://images.unsplash.com/photo-1601135183537-10c09f98902a?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)">
+    <div style="display: flex; align-items: center;">
 
     <h1 style="text-align:center">
         Contact us
     </h1>
 
-        <div style="margin-right: 134px; margin-left: 200px">
-        <img src="https://i.postimg.cc/151THRSQ/Untitled.png" alt="Phone" width="150" height="60">
+        <div style="margin-right: 134px; margin-left: 200px; font-weight:bold">
+            <img src="https://i.postimg.cc/jjjfj0GB/Untitled.png" alt="Phone" width="150" height="60">
             <p>+27 83 857 0874</p>
         </div>
 
-        <div style="margin-right: 229px;">
-        <img src="https://i.postimg.cc/B6L8yyYD/Untitled1.png" alt="PO Box" width="70" height="60">
+        <div style="margin-right: 129px;font-weight:bold">
+            <img src="https://i.postimg.cc/c4RV4QcV/Untitled1.png" alt="PO Box" width="150" height="60">
         <p>
             1 Oxford Street
         </p>
         </div>
 
-        <div style="margin-right: 229px;">
-        <img src="https://i.postimg.cc/L6ZqvrYM/Untitled3.png" alt="Email" width="70" height="60">
+        <div style="margin-right: 229px;font-weight:bold">
+            <img src="https://i.postimg.cc/xChM7xph/Untitled3.png" alt="Email" width="70" height="60">
             <p>JKhumalo@gmail.com</p>
         </div>
 
     </div>
+    </body>
