--- a/Views/Home/MyWork.cshtml
+++ b/Views/Home/MyWork.cshtml
@@ -1,5 +1,107 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
+<body style="background-color:grey">
+<div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+    <h2 style="text-align:center">
+        My work
+    </h2>
+</div>
+
+<br />
+
+<div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+
+        <div style="display: flex; align-items: center;">
+            <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400" style="margin-right: 20px;">
+            <p style="font-weight:bold;">
+                My name is James Khumalo. I am a young artisan who creates art through <br />
+                multiple different mediums such as clay and wood, i like to think of <br />
+                myself as a driven and creative individual who strives to always do his best.
+            </p>
+        </div>
+    
+</div>
+
+<br />
+
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+        <div style="display: flex; align-items: center; justify-content: flex-end;">
+            <p style="font-weight:bold; margin-right: 20px;">
+                My name is James Khumalo. I am a young artisan who creates art through <br />
+                multiple different mediums such as clay and wood, i like to think of <br />
+                myself as a driven and creative individual who strives to always do his best.
+            </p>
+            <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400">
+        </div>
+    </div>
+
+    <br />
+
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+
+        <div style="display: flex; align-items: center;">
+            <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400" style="margin-right: 20px;">
+            <p style="font-weight:bold;">
+                My name is James Khumalo. I am a young artisan who creates art through <br />
+                multiple different mediums such as clay and wood, i like to think of <br />
+                myself as a driven and creative individual who strives to always do his best.
+            </p>
+        </div>
+
+    </div>
+
+    <br />
+
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+        <div style="display: flex; align-items: center; justify-content: flex-end;">
+            <p style="font-weight:bold; margin-right: 20px;">
+                My name is James Khumalo. I am a young artisan who creates art through <br />
+                multiple different mediums such as clay and wood, i like to think of <br />
+                myself as a driven and creative individual who strives to always do his best.
+            </p>
+            <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400">
+        </div>
+    </div>
+
+    <br />
+
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+
+        <div style="display: flex; align-items: center;">
+            <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400" style="margin-right: 20px;">
+            <p style="font-weight:bold;">
+                My name is James Khumalo. I am a young artisan who creates art through <br />
+                multiple different mediums such as clay and wood, i like to think of <br />
+                myself as a driven and creative individual who strives to always do his best.
+            </p>
+        </div>
+
+    </div>
+
+    <br />
+
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+        <div style="display: flex; align-items: center; justify-content: flex-end;">
+            <p style="font-weight:bold; margin-right: 20px;">
+                My name is James Khumalo. I am a young artisan who creates art through <br />
+                multiple different mediums such as clay and wood, i like to think of <br />
+                myself as a driven and creative individual who strives to always do his best.
+            </p>
+            <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400">
+        </div>
+    </div>
+
+    <br />
+
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+
+        <div style="display: flex; align-items: center;">
+            <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400" style="margin-right: 20px;">
+            <p style="font-weight:bold;">
+                My name is James Khumalo. I am a young artisan who creates art through <br />
+                multiple different mediums such as clay and wood, i like to think of <br />
+                myself as a driven and creative individual who strives to always do his best.
+            </p>
+        </div>
+
+    </div>
+</body>
