--- a/Views/Home/MyWork.cshtml
+++ b/Views/Home/MyWork.cshtml
@@ -1,6 +1,6 @@
 ﻿
-<body style="background-color:grey">
-<div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+<body style="background-image:url(https://images.unsplash.com/photo-1487088678257-3a541e6e3922?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); background-size: auto"
+<div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.8); padding: 10px;">
     <h2 style="text-align:center">
         My work
     </h2>
@@ -8,14 +8,16 @@
 
 <br />
 
-<div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+<div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.7); padding: 10px;">
 
         <div style="display: flex; align-items: center;">
             <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400" style="margin-right: 20px;">
             <p style="font-weight:bold;">
-                My name is James Khumalo. I am a young artisan who creates art through <br />
-                multiple different mediums such as clay and wood, i like to think of <br />
-                myself as a driven and creative individual who strives to always do his best.
+                This piece is a recreation of a timeless relic. <br />
+                I have done my best to capture the essence of what the original<br />
+                artist was trying to convey.<br />
+                <br />
+                Price: R12 000
             </p>
         </div>
     
@@ -23,27 +25,32 @@
 
 <br />
 
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.7); padding: 10px;">
         <div style="display: flex; align-items: center; justify-content: flex-end;">
             <p style="font-weight:bold; margin-right: 20px;">
-                My name is James Khumalo. I am a young artisan who creates art through <br />
-                multiple different mediums such as clay and wood, i like to think of <br />
-                myself as a driven and creative individual who strives to always do his best.
+                This piece is my own rendition of a modern simple <br />
+                vase that can fit into a range of home aesthetics
+                <br />
+                <br />
+                Price: R5 000
             </p>
-            <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400">
+            <img src="https://plus.unsplash.com/premium_photo-1681382743881-6afac0a7a556?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="400" height="400">
         </div>
     </div>
 
     <br />
 
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.7); padding: 10px;">
 
         <div style="display: flex; align-items: center;">
-            <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400" style="margin-right: 20px;">
+            <img src="https://images.unsplash.com/photo-1582131503261-fca1d1c0589f?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="400" height="400" style="margin-right: 20px;">
             <p style="font-weight:bold;">
-                My name is James Khumalo. I am a young artisan who creates art through <br />
-                multiple different mediums such as clay and wood, i like to think of <br />
-                myself as a driven and creative individual who strives to always do his best.
+                This piece is a combination of my love for both pottery<br />
+                and woodworking by creating a beutiful set of vases that are <br />
+                extremely high quality but still keep to a minimalistic feel
+                <br />
+                <br />
+                Price: R7 000
             </p>
         </div>
 
@@ -51,27 +58,32 @@
 
     <br />
 
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.7); padding: 10px;">
         <div style="display: flex; align-items: center; justify-content: flex-end;">
             <p style="font-weight:bold; margin-right: 20px;">
-                My name is James Khumalo. I am a young artisan who creates art through <br />
-                multiple different mediums such as clay and wood, i like to think of <br />
-                myself as a driven and creative individual who strives to always do his best.
+                This piece was a venture outside of my comfort zone<br />
+                the challenge was to create an animal out of readily available resources<br />
+                this led me to creating a dog out of sticks and wood that can be found on the ground.
+                <br />
+                <br />
+                Price: R3 000
             </p>
-            <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400">
+            <img src="https://images.unsplash.com/photo-1694616807856-1f85b116c69e?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="400" height="400">
         </div>
     </div>
 
     <br />
 
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.7); padding: 10px;">
 
         <div style="display: flex; align-items: center;">
-            <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400" style="margin-right: 20px;">
+            <img src="https://images.unsplash.com/photo-1617638924751-cc232f82ecf9?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="400" height="400" style="margin-right: 20px;">
             <p style="font-weight:bold;">
-                My name is James Khumalo. I am a young artisan who creates art through <br />
-                multiple different mediums such as clay and wood, i like to think of <br />
-                myself as a driven and creative individual who strives to always do his best.
+                This piece is a table using a beautiful slab of oak wood<br />
+                and resin that creates a fantastic but simple visual .
+                <br />
+                <br />
+                Price: R 15 000
             </p>
         </div>
 
@@ -79,29 +91,19 @@
 
     <br />
 
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.7); padding: 10px;">
         <div style="display: flex; align-items: center; justify-content: flex-end;">
             <p style="font-weight:bold; margin-right: 20px;">
-                My name is James Khumalo. I am a young artisan who creates art through <br />
-                multiple different mediums such as clay and wood, i like to think of <br />
-                myself as a driven and creative individual who strives to always do his best.
+                this peace is my first venture into technological art<br />
+                this is a wireless charger that is crafted from a beatufil piece of pine wood<br />
+                this brings both funtionality and style to your desk whether it be at home<br />
+                or in the office.
+                <br />
+                <br />
+                Price: R2 500
             </p>
-            <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400">
+            <img src="https://images.unsplash.com/photo-1677870350664-a1faf15dcfe7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="400" height="400">
         </div>
     </div>
 
-    <br />
-
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
-
-        <div style="display: flex; align-items: center;">
-            <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400" style="margin-right: 20px;">
-            <p style="font-weight:bold;">
-                My name is James Khumalo. I am a young artisan who creates art through <br />
-                multiple different mediums such as clay and wood, i like to think of <br />
-                myself as a driven and creative individual who strives to always do his best.
-            </p>
-        </div>
-
-    </div>
 </body>
