--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -5,7 +5,7 @@
 }
 <body style="background-image:url(https://images.unsplash.com/photo-1595446472901-b0988e150f9c?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); background-size: cover">
    
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.6); padding: 10px; border-radius: 20px;">
     <h2 style="text-align:center">
         Who We Are
     </h2>
@@ -13,7 +13,7 @@
 
     <br />
 
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.6); padding: 10px; border-radius: 20px;">
     <h3>
         general information
     </h3>
@@ -26,7 +26,7 @@
 
     <br />
 
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.6); padding: 10px; border-radius: 20px;">
     <h3 style="text-align:right">
         Our Goal
     </h3>
@@ -38,7 +38,7 @@
 
     <br />
 
-    <div style="font-weight:bold; text-align:center; background-color: rgba(255, 255, 255, 0.4); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.6); padding: 10px; border-radius: 20px;">
     <h3>
         how we plan to do this
     </h3>
