--- a/Views/Home/MyWork.cshtml
+++ b/Views/Home/MyWork.cshtml
@@ -1,6 +1,6 @@
 ﻿
-<body style="background-image:url(https://images.unsplash.com/photo-1487088678257-3a541e6e3922?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); background-size: auto"
-<div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.8); padding: 10px;">
+<body style="background-image:url(https://images.unsplash.com/photo-1487088678257-3a541e6e3922?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); background-size: auto">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.8); padding: 10px; border-radius: 20px;">
     <h2 style="text-align:center">
         My work
     </h2>
@@ -8,7 +8,7 @@
 
 <br />
 
-<div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.7); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.8); padding: 10px; border-radius: 20px;">
 
         <div style="display: flex; align-items: center;">
             <img src="https://i.postimg.cc/X7kfgbjz/black-figured-amphora-wine-jar-signed-by-exekias-a-512.png" width="400" height="400" style="margin-right: 20px;">
@@ -25,7 +25,7 @@
 
 <br />
 
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.7); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.8); padding: 10px; border-radius: 20px;">
         <div style="display: flex; align-items: center; justify-content: flex-end;">
             <p style="font-weight:bold; margin-right: 20px;">
                 This piece is my own rendition of a modern simple <br />
@@ -40,7 +40,7 @@
 
     <br />
 
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.7); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.8); padding: 10px; border-radius: 20px;">
 
         <div style="display: flex; align-items: center;">
             <img src="https://images.unsplash.com/photo-1582131503261-fca1d1c0589f?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="400" height="400" style="margin-right: 20px;">
@@ -58,7 +58,7 @@
 
     <br />
 
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.7); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.8); padding: 10px; border-radius: 20px;">
         <div style="display: flex; align-items: center; justify-content: flex-end;">
             <p style="font-weight:bold; margin-right: 20px;">
                 This piece was a venture outside of my comfort zone<br />
@@ -74,7 +74,7 @@
 
     <br />
 
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.7); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.8); padding: 10px; border-radius: 20px;">
 
         <div style="display: flex; align-items: center;">
             <img src="https://images.unsplash.com/photo-1617638924751-cc232f82ecf9?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="400" height="400" style="margin-right: 20px;">
@@ -91,7 +91,7 @@
 
     <br />
 
-    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.7); padding: 10px;">
+    <div style="font-weight:bold; background-color: rgba(255, 255, 255, 0.8); padding: 10px; border-radius: 20px;">
         <div style="display: flex; align-items: center; justify-content: flex-end;">
             <p style="font-weight:bold; margin-right: 20px;">
                 this peace is my first venture into technological art<br />
