--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,11 @@
 ﻿@{
+    var userID = ViewData["userID"];  
+}
+@if (userID != null)
+{
+    <p>User ID: @userID</p>
+}
+@{
     ViewData["Title"] = "Home Page";
 }
 <body style="background-image:url(https://images.unsplash.com/photo-1414497729697-b8555ba6c1cc?q=80&w=1910&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); background-size: auto">
