--- a/Views/User/SignUp.cshtml
+++ b/Views/User/SignUp.cshtml
@@ -150,8 +150,8 @@
 <body style="background-color: #1a1a1a;">
 <div style="display: flex; justify-content: center; align-items: center; height: 75vh;">
 <form class="form" action="SignUp" method="post">
-    <p class="title">Register </p>
-    <p class="message">Signup now and get full access to our app. </p>
+    <p class="title">Sign Up </p>
+    <p class="message">Signup now. </p>
     <div class="flex">
         <label>
             <input class="input" type="text" name="Name" placeholder="" required>
