--- a/Views/Product/AddProduct.cshtml
+++ b/Views/Product/AddProduct.cshtml
@@ -24,8 +24,8 @@
             gap: .5rem;
         }
 
-        form input[type="text"],
         form input[type="text"] {
+            color: white;
             border-radius: 0.5rem;
             padding: 1rem 0.75rem;
             width: 100%;
