--- a/Views/User/SignUp.cshtml
+++ b/Views/User/SignUp.cshtml
@@ -175,6 +175,7 @@
     </label>
     
     <button class="submit">Submit</button>
+    <p class="signin">have an account? <a href="@Url.Action("Login","User")">Login</a> </p>
 </form>
 </div>
 </body>
