created a cookie to hold userID for later use

--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -161,7 +161,7 @@
         </label>
 
         <label>
-            <input class="input" type="text" name="Password" required>
+            <input class="input" type="password" name="Password" required>
             <span>Password</span>
         </label>
 
