--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,11 +38,20 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="AddProduct">sell products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Login">Login</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="product" asp-action="Transactions">Purchase History</a>
                         </li>
+                        
+                        
                         
                     </ul>
                 </div>
+            </div>
+            <div>
+                <ul class ="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Login">Login</a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
