--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -147,9 +147,8 @@
         }
     </style>
 </head>
-
-@*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*@
 <body style="background-color: #1a1a1a;">
+    
 <div style="display: flex; justify-content: center; align-items: center; height: 75vh;">        
     <form class="form" asp-controller="Login" asp-action="Login" method="post">
         <p class="title">Login </p>
@@ -169,4 +168,14 @@
         <p class="signin">Don't have an account ? <a href="@Url.Action("SignUp","User")">Sign Up</a> </p>
     </form>
 </div>
+    @{
+        var alertMessage = TempData["AlertMessage"] as string;
+    }
+
+    @if (!string.IsNullOrEmpty(alertMessage))
+    {
+        <script>
+            alert("@Html.Raw(alertMessage)");
+        </script>
+    }
 </body>
