--- a/Views/Product/AddProduct.cshtml
+++ b/Views/Product/AddProduct.cshtml
@@ -8,7 +8,7 @@
         form {
             --bg-light: #efefef;
             --bg-dark: #707070;
-            --clr: #58BC82;
+            --clr: #00bfff;
             --clr-alpha: #9c9c9c60;
             display: flex;
             flex-direction: column;
