--- a/Views/Product/Transactions.cshtml
+++ b/Views/Product/Transactions.cshtml
@@ -3,3 +3,85 @@
 *@
 @{
 }
+@model List<CLDV_POE_ST10249266.Models.TransactionTBL>
+
+<head>
+    <style>
+        body {
+            background-color: #1a1a1a;
+            color: #fff;
+        }
+
+        table {
+            width: 80%;
+            padding: 10px;
+            border-radius: 20px;
+            background-color: #1a1a1a;
+            color: #fff;
+            border: 3px solid #333;
+            margin: auto;
+            margin-top: 75px;
+            border-collapse: separate;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #333;
+            border-right: 1px solid #333;
+        }
+
+            th:first-child {
+                border-top-left-radius: 15px;
+            }
+
+            th:last-child {
+                border-top-right-radius: 15px;
+            }
+
+        tr:last-child td:first-child {
+            border-bottom-left-radius: 15px;
+        }
+
+        tr:last-child td:last-child {
+            border-bottom-right-radius: 15px;
+        }
+
+        th {
+            background-color: #00bfff;
+            color: #1a1a1a;
+        }
+
+        tr:nth-child(even) {
+            background-color: #333;
+        }
+
+        td:last-child, th:last-child {
+            border-right: none;
+        }
+    </style>
+</head>
+
+<body>
+    <table>
+        <thead>
+            <tr>
+                <th>Transaction ID</th>
+                <th>Product ID</th>
+                <th>Product Name</th>
+                <th>Product Price</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var transaction in Model)
+            {
+                <tr>
+                    <td>@transaction.transactionID</td>
+                    <td>@transaction.ProductID</td>
+                    <td>@transaction.product_name</td>
+                    <td>@transaction.product_price</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</body>
