added input validation for login and sell products

--- a/Views/Product/AddProduct.cshtml
+++ b/Views/Product/AddProduct.cshtml
@@ -123,23 +123,23 @@
     <form class="form" action="AddProduct" method="post">
     <span class="input-span" action="AddProduct" method="post">
         <label class="label">Product Name:</label>
-        <input type="text" name="productName">
+        <input type="text" name="productName" required>
     </span>
     <span class="input-span">
         <label class="label">Product Description:</label>
-        <input type="text" name="productDescription">
+            <input type="text" name="productDescription" required>
     </span>
     <span class="input-span">
         <label class="label">Product Price:</label>
-        <input type="text" name="productPrice">
+            <input type="text" name="productPrice" required>
     </span>
     <span class="input-span">
         <label class="label">Product Quantity:</label>
-        <input type="text" name="productQuantity">
+            <input type="text" name="productQuantity" required>
     </span>
     <span class="input-span">
         <label class="label">Product Image (URL):</label>
-        <input type="text" name="productImage">
+            <input type="text" name="productImage" required>
     </span>
     <div style="text-align:center">
             <button type="submit">Submit</button>
